# sonobus-aooserver

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  aooserver.jucer  compose.yaml  docker-entrypoint.sh  toolchain-mingw-ucrt-x86_64.cmake
.github/workflows/: release.yml
Builds/Windows/: CMakeLists.txt  toolchain-mingw-ucrt-x86_64.cmake
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_core/threads/: juce_ThreadPool.h
Source/: Main.cpp
